# bsb-hdf5

./: .bumpversion.cfg  .readthedocs.yml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: branch.yml  build.yml  docs.yml  external_pr.yml  isort.yml  main.yml
bsb_hdf5/: __init__.py  chunks.py  connectivity_set.py  file_store.py  morphology_repository.py  placement_set.py  resource.py
docs/: requirements.txt
docs/source/: conf.py  modindex.rst
test/: __init__.py  test_basics.py  test_chunks.py  test_cs.py  test_interface.py  test_mr.py  test_placement.py
test/test_setup/: __init__.py
